--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "mix",
+        "development": "vite",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
@@ -10,15 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.0",
-        "alpinejs": "^3.0.6",
-        "autoprefixer": "^10.4.7",
-        "axios": "^0.21",
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "alpinejs": "^3.15.0",
+        "autoprefixer": "^10.4.16",
+        "axios": "^1.12.1",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^2.0.1",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0"
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.4.0",
+        "vite": "^7.1.5"
     },
     "dependencies": {
         "rateyo": "^3.0.0-alpha.2"
