--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^2.0",
+        "laravel/pint": "^1.24",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.1",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^10",
         "spatie/laravel-ignition": "^2.0"
     },
