--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/boost": "^1.1",
         "laravel/breeze": "^2.0",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.0.1",
