--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "scripts": {
         "dev": "npm run development",
         "development": "vite",
+        "build": "vite build",
+        "test:web": "vitest --run",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
@@ -20,7 +22,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
-        "vite": "^7.1.5"
+        "vite": "^7.1.5",
+        "vitest": "^1.6.0"
     },
     "dependencies": {
         "rateyo": "^3.0.0-alpha.2"
