Dockerポート8080の設定と接続問題の修正
変更内容:
- Apacheをポート80からポート8080でリッスンするように設定
- VirtualHost設定をポート8080に更新
- ファイルパーミッション問題を解決するためにユーザー/グループマッピングを追加
- マイグレーションクラス名をCreateInformationTableからCreateInformationsTableに修正
- Docker Composeのポートマッピングを80から8080に更新

この変更により、localhost:8080へのアクセス時の'Connection reset by peer'エラーが解決されます

--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -2,12 +2,20 @@ FROM php:8.3-apache
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
 
+ARG WEB_USER_ID
+ARG WEB_GROUP_ID
+
+RUN usermod -u $WEB_USER_ID -o www-data
+RUN groupmod -g $WEB_GROUP_ID -o www-data
+
 RUN apt-get update -y && \
     apt-get install -y libpq-dev zip unzip && \
     docker-php-ext-install pdo pdo_pgsql && \
     apt-get clean
 
 RUN a2enmod rewrite
+
+RUN sed -i 's/Listen 80/Listen 8080/' /etc/apache2/ports.conf
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
