--- a/compose.yml
+++ b/compose.yml
@@ -3,11 +3,15 @@ services:
     build:
       context: .
       dockerfile: infra/docker/php/Dockerfile
+      args:
+        - WEB_USER_ID=${WEB_USER_ID:-1000}
+        - WEB_GROUP_ID=${WEB_GROUP_ID:-1000}
+    user: "${WEB_USER_ID:-1000}:${WEB_GROUP_ID:-1000}"
     container_name: surplus-eats-app
     volumes:
       - .:/var/www/html
     ports:
-      - "${APP_PORT:-80}:80"
+      - "${APP_PORT:-8080}:8080"
     depends_on:
       - db
 
